manage approve user in your edit shape

--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -348,6 +348,8 @@
     <Compile Include="Activities\TaxonomySetValuesForm.cs" />
     <Compile Include="Activities\UserEventActivity.cs" />
     <Compile Include="ApproveUserExtension\Drivers\ApprovePartDriver.cs" />
+    <Compile Include="ApproveUserExtension\Handler\ApproveUserHandler.cs" />
+    <Compile Include="ApproveUserExtension\Services\ApproveUserService.cs" />
     <Compile Include="ColorPicker\ColorPickerField.cs" />
     <Compile Include="ColorPicker\ColorPickerFieldDriver.cs" />
     <Compile Include="ColorPicker\ColorPickerFieldEditorEvents.cs" />
@@ -636,7 +638,6 @@
     <None Include="Views\EditorTemplates\Parts\ProtectionSettingsPart.Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ApproveUserExtension\Handler\" />
     <Folder Include="ContentPickerContentCreation\Models\" />
     <Folder Include="ContentPickerContentCreation\Style\" />
   </ItemGroup>
