--- a/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
@@ -136,6 +136,7 @@
     <Compile Include="ViewModels\AddressConfigurationTerritoryViewModel.cs" />
     <Compile Include="ViewModels\AddressEditViewModel.cs" />
     <Compile Include="ViewModels\AddressesVM.cs" />
+    <Compile Include="ViewModels\ConfigurationRequestViewModel.cs" />
     <Compile Include="ViewModels\PaymentInfoViewModel.cs" />
     <Compile Include="ViewModels\AddressConfigurationSiteSettingsPartViewModel.cs" />
   </ItemGroup>
@@ -143,6 +144,9 @@
     <Content Include="Assets.json" />
     <Content Include="Assets\Styles.less" />
     <Content Include="Scripts\address-configuration.js" />
+    <Content Include="Scripts\address-configuration.min.js">
+      <DependentUpon>address-configuration.js</DependentUpon>
+    </Content>
     <Content Include="Scripts\ship.js" />
     <Content Include="Styles\admin-style.css" />
     <Content Include="Styles\admin-style.min.css">
