--- a/src/Modules/Laser.Orchard.NwazetIntegration/bundleconfig.json
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/bundleconfig.json
@@ -4,5 +4,11 @@
     "inputFiles": [
       "Scripts/address-configuration.js"
     ]
+  },
+  {
+    "outputFileName": "Scripts/ship.min.js",
+    "inputFiles": [
+      "Scripts/ship.js"
+    ]
   }
 ]
