Adds some summary KPI on stats Adds AdminLTE css Refactors KrakeAdmin Theme css

--- a/src/Themes/KrakeAdmin/KrakeAdmin.csproj
+++ b/src/Themes/KrakeAdmin/KrakeAdmin.csproj
@@ -87,6 +87,7 @@
     <Content Include="Scripts\main.js" />
     <Content Include="Scripts\overthrow.min.js" />
     <Content Include="Scripts\TooltipsZoomimage.js" />
+    <Content Include="Styles\baseadmin.css" />
     <Content Include="Styles\fonts\fontawesome-webfont.svg" />
     <Content Include="Styles\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Styles\fonts\HANDGOTB.svg" />
