add alternate for change style at author of modify

--- a/src/Themes/KrakeAdmin/KrakeAdmin.csproj
+++ b/src/Themes/KrakeAdmin/KrakeAdmin.csproj
@@ -203,6 +203,7 @@
     <Content Include="Views\Media-OEmbed.Thumbnail.cshtml" />
     <Content Include="Views\Parts\Common.Metadata.SummaryAdmin.cshtml" />
     <Content Include="Views\Parts\PublishLater.Metadata.SummaryAdmin.cshtml" />
+    <Content Include="Views\CommonMetadataLastModified.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminThemeOverride.cs" />
