clean some of the product stuff. Start work on script to collect information and pass it to tag manager

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
@@ -217,6 +217,9 @@
   <ItemGroup>
     <Content Include="Views\GTMProduct.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\Product.TagManager.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
