add javascript to shape payment success

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Laser.Orchard.NwazetIntegration.csproj
@@ -235,6 +235,7 @@
   <ItemGroup>
     <None Include="bundleconfig.json" />
     <Content Include="Views\GTMShoppingCart.cshtml" />
+    <Content Include="Views\GTMPurchase.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
