--- a/src/Modules/Laser.Orchard.Questionnaires/Laser.Orchard.Questionnaires.csproj
+++ b/src/Modules/Laser.Orchard.Questionnaires/Laser.Orchard.Questionnaires.csproj
@@ -124,7 +124,7 @@
     <Content Include="Views\EditorTemplates\Parts\Questionnaire_Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Parts\Questionnaire_FrontEnd_Edit.cshtml" />
+    <Content Include="Views\Parts\_Questionnaire_FrontEnd_Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Parts\Questionnaire_Summary.cshtml" />
@@ -171,6 +171,7 @@
     <Content Include="Views\QuestionnaireStats\Detail.cshtml" />
     <Content Include="Views\QuestionnaireStats\QuestionDetail.cshtml" />
     <Content Include="Views\LocalNavRankings.cshtml" />
+    <Content Include="Views\EditorTemplates\Parts\Questionnaire_FrontEnd_Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
