--- a/src/Modules/Laser.Orchard.Questionnaires/Laser.Orchard.Questionnaires.csproj
+++ b/src/Modules/Laser.Orchard.Questionnaires/Laser.Orchard.Questionnaires.csproj
@@ -98,7 +98,9 @@
     <Compile Include="ResourceManifest.cs" />
     <Compile Include="Routes.cs" />
     <Compile Include="Services\IQuestionnairesServices.cs" />
+    <Compile Include="Services\IQuestionAnswerRepositoryService.cs" />
     <Compile Include="Services\QuestionnairesServices.cs" />
+    <Compile Include="Services\QuestionAnswerRepositoryService.cs" />
     <Compile Include="Settings\GamePartEditorEvents.cs" />
     <Compile Include="Settings\GamePartSettingVM.cs" />
     <Compile Include="Settings\QuestionnairesPartEditorEvents.cs" />
